[gd_scene load_steps=6 format=2]

[ext_resource path="res://characters/Fishkeeper/Grenade.gd" type="Script" id=1]
[ext_resource path="res://assets/borb.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0
height = 8.0

[sub_resource type="CircleShape2D" id=2]
radius = 48.0416

[sub_resource type="CircleShape2D" id=3]

[node name="Grenade" type="KinematicBody2D"]
rotation = -1.5708
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1, 2 )
texture = ExtResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -1.5708
scale = Vector2( 1, -1 )
shape = SubResource( 1 )

[node name="ExplosionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource( 2 )

[node name="TouchArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TouchArea"]
shape = SubResource( 3 )
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
[connection signal="body_entered" from="TouchArea" to="." method="_on_TouchArea_body_entered"]
